fix problems, reformat code, add bat files